k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: api-flask-namespace
  labels:
    name: development
