k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-api-flask
  namespace: development
  labels:
    app: app-api-flask
    environment: development
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-api-flask
      app.kubernetes.io/name: MyApp
  template:
    metadata:
      labels:
        app: app-api-flask
        app.kubernetes.io/name: MyApp
    spec:
      containers:
      - name: app-api-flask
        image: keilapitangui/app-api-flask:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "250m"
          limits:
            cpu: "500m"
        ports:
        - containerPort: 5000
        volumeMounts: 
        - name: tsl-secret
          mountPath: "/etc/ssl/certs" #volume para certificado tsl
          readOnly: true
      volumes:
      - name: tsl-secret
        secret:
          secretName: app-api-flask-tsl-secret
      restartPolicy: Always
