k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-flask-svc
  namespace: development
  annotations:
    description: "Serviço Api Flask"
  labels:
    name: api-flask-svc
spec: 
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: MyApp
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
    - name: https
      protocol: TCP
      port: 443
      targetPort: 5000
  externalTrafficPolicy: Local
