k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-flask-ingress
  namespace: development
spec:
  rules:
  - host: app-api-flask.local  # Domínio que você está usando
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-flask-svc  # Nome do seu Service
            port:
              number: 80
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-flask-svc  # Nome do seu Service
            port:
              number: 443  # Porta para HTTPS
  tls:
  - hosts:
    - app-api-flask.local
    secretName: app-api-flask-tls-secret
    # comando para criar certificado tsl 
    # openssl req -x509 -newkey rsa:2048 -keyout cert.key -out cert.crt -days 365 -nodes
